# trip_planner

./: README.md  pyproject.toml
src/trip_planner/: crew.py  main.py
